Spacing Header and body gap correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,19 +3,21 @@
 /*--------------------- HEADER --------------------- */
 
 header {
-    min-height: 300px;
+    min-height: 150px;
 }
 
 .logo {
-    /*padding-top: 20px;
-    text-align: left;*/
-    background: url("/assets/images/cb-main-no-bg-small.jpg.png") no-repeat center center;
-    height: 100px;
+    padding-top: 20px;
+    text-align: left;
+    background: url("/assets/images/cb-main-no-bg-smaller.jpg.png") no-repeat center center;
+    height: 150px;
 }
 
 .logo-centered {
     padding-top:20px;
     text-align: center;
+    background: url("/assets/images/cb-main-no-bg-smaller.jpg.png") no-repeat center center;
+    height: 150px;
 }
 
 h1 {
@@ -23,7 +25,7 @@ h1 {
 }
 
 .main-menu {
-    padding-top: 25px;
+    padding-top: 30px;
     text-align: center;
 }
 
@@ -31,21 +33,17 @@ h1 {
     color: #333333;
 }
 
-.bar-block {
-    background-color: #cccccc;
-    height: 1px;
-}
-
 /*--------------------- BODY--------------------- */
 
 .body-space {
+    border-top: solid rgba(83, 83, 83, 0.3) 1px;
+    border-bottom: solid rgba(83, 83, 83, 0.3) 1px;
     height: 500px;
-    background-color: rgb(51, 51, 51, 0.1);
 }
 
 /*--------------------- FOOTER--------------------- */
 
 footer {
     min-height: 200px;
-    background-color: #cccccc;
+    background-color: #f3f3f3;
 }
